Extending db schema and controller with chat to presere history
